force-app/main/default/objects/Propuestas_Comodato__c/Propuestas_Comodato__c.object-meta.xml
<CustomObject>
    <label>Propuesta Comodato</label>
    <nameField>
        <label>Propuestas Comodato Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propuestas Comodatos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>