force-app/main/default/objects/Propuestas_Comodato__c/fields/Cantidad_de_tasas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_tasas__c</fullName>
    <label>Cantidad de Tasas Diarias / Capsulas Mes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>