force-app/main/default/objects/Propuestas_Comodato__c/fields/Fecha_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Propuesta__c</fullName>
    <label>Fecha Propuesta</label>
    <type>Date</type>
</CustomField>