force-app/main/default/objects/Propuestas_Comodato__c/fields/Tipo_de_Cafe__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cafe__c</fullName>
    <label>Tipo de Cafe</label>
    <length>250</length>
    <type>Text</type>
</CustomField>