force-app/main/default/objects/Propuestas_Comodato__c/fields/Tipo_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Negocio__c</fullName>
    <label>Tipo de Negocio</label>
    <length>250</length>
    <type>Text</type>
</CustomField>